@@ -78,7 +78,9 @@ If MODE is specified, play as it.  Default MODE is \"play\"."
 	      (raw-buffer (get-text-property (point) 'mime-view-raw-buffer)))
 	  (setq mime-preview-after-decoded-position (point))
 	  (set-buffer raw-buffer)
-	  (mime-raw-play-entity entity-info mode)
+	  (save-restriction
+	    (widen)
+	    (mime-raw-play-entity entity-info mode))
 	  (when (eq (current-buffer) raw-buffer)
 	    (set-buffer the-buf)
 	    (goto-char mime-preview-after-decoded-position)
@@ -127,13 +129,6 @@ specified, play as it.  Default MODE is \"play\"."
 	(encoding (mime-entity-encoding entity-info)))
     (or content-type
 	(setq content-type (make-mime-content-type 'text 'plain)))
-    ;; Check for VM
-    (if (< beg (point-min))
-	(setq beg (point-min))
-      )
-    (if (< (point-max) end)
-	(setq end (point-max))
-      )
     (let (method cal ret)
       (setq cal (list* (cons 'major-mode major-mode)
 		       (cons 'encoding encoding)
